<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".CalculadoraActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <TextView
            android:id="@+id/txtTituloCalc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:textColor="@color/white"
            android:padding="10sp"
            android:text="@string/strTitulo"
            android:gravity="center"
            android:layout_marginStart="10sp">
        </TextView>


        <TextView
            android:id="@+id/txtNombreCalc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:textColor="@color/white"
            android:padding="10sp"
            android:text="@string/strNombre"
            android:gravity="center"
            android:layout_marginStart="10sp">
        </TextView>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">


            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:hint="@string/strNum1"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:inputType="numberDecimal"
                android:autofillHints="name"
                android:id="@+id/txtNum1">
            </EditText>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:hint="@string/strNum2"
                android:inputType="numberDecimal"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:autofillHints="name"
                android:id="@+id/txtNum2">
            </EditText>

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:background="@color/white"
                android:id="@+id/spnOperaciones">
            </Spinner>


        </LinearLayout>


        <TextView
            android:id="@+id/txtResultado"
            android:layout_width="match_parent"
            android:textColor="@color/white"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:padding="10sp"
            android:text="@string/strResultado"
            android:gravity="center"
            android:layout_marginStart="10sp">
        </TextView>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">
            <Button
                android:id="@+id/btnCalcular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/strCalcular">
            </Button>
            <Button
                android:id="@+id/btnLimpiar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/strLimpiar">
            </Button>
            <Button
                android:id="@+id/btnRegresar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/strRegresar">
            </Button>

        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>